# jsonfixer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/jsonfixer/: __init__.py  core.py
tests/: test_fix_quotes.py
